# pennywise

./: .gitignore  BACKLOG.md  CLAUDE.md  Intention.md  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/proptest-regressions/services/: transaction.txt
backend/proptest-regressions/utils/: validation.txt
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/api/v1/: admin.rs  budgets.rs  chart_of_accounts.rs  ledger_files.rs  mod.rs  recurring.rs  transactions.rs  users.rs  workspaces.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs
backend/src/models/v1/: budget.rs  chart_of_accounts.rs  mod.rs  recurring.rs  transaction.rs  user.rs  workspace.rs
backend/src/services/: budget.rs  cache.rs  file_store.rs  ledger_cli.rs  ledger_parser.rs  mod.rs  recurring.rs  transaction.rs  user.rs  workspace.rs
backend/src/utils/: admin_guard.rs  auth.rs  error.rs  mod.rs  validation.rs
backend/test_data/users/: user-fb0f2004-9403-4d07-8112-cfceee0dd21f-auth.json  user-fb0f2004-9403-4d07-8112-cfceee0dd21f-chart-of-accounts.json  user-fb0f2004-9403-4d07-8112-cfceee0dd21f.json
backend/test_data/workspaces/: workspace-39d5996b-bfd0-4e97-954e-21eb34f4040a.json
docs/: QA_LOG.md  TODO.md
docs/openapi/: pennywise.yaml
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/public/: manifest.webmanifest
frontend/src/: index.css  main.tsx
frontend/src/components/: app-layout.tsx  auth-guard.tsx  (+5 more)
worker/: Cargo.toml  Dockerfile
worker/src/: main.rs
(+50 files in other folders)
